--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "portfolio",
   "homepage": " https://nickgdam.github.io/React-Portfolio/",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,12 +20,13 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    
   },
   "eslintConfig": {
     "extends": [
